--- a/README
+++ b/README
@@ -50,4 +50,5 @@ v0.18 * refactored parts of the code
       * added simple check if patch file is valid
       * added ability to load/save patches in sysex format 
 v0.19 * tweaked the keyboard dialog. keys are now black/white
+v0.20 * now fetching patches works with latest firmware
 
